--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 13:05:26 2018</p>
+         Last Run: Mon Jul 23 14:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Edge School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 23, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,51 +30,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>43</td>
+                        <td>35</td>
                         <td>73</td>
-                        <td>2</td>
-                        <td>21</td>
+                        <td>1</td>
+                        <td>18</td>
                         <td>NNE</td>
-                        <td>66</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>45</td>
+                        <td>39</td>
                         <td>75</td>
-                        <td>1</td>
-                        <td>18</td>
+                        <td>0</td>
+                        <td>16</td>
                         <td>NNE</td>
-                        <td>83</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>13</td>
-                        <td>13</td>
-                        <td>50</td>
-                        <td>81</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>44</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>N</td>
-                        <td>91</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>40</td>
-                        <td>88</td>
+                        <td>42</td>
+                        <td>87</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>94</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "16",
                  "15",
-                 "13",
+                 "14",
                  "12"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "16",
                  "15",
-                 "13",
+                 "14",
                  "12"
                ]
              }
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "43",
-                 "45",
-                 "50",
-                 "40"
+                 "35",
+                 "39",
+                 "44",
+                 "42"
                ]
              },
              {
@@ -199,8 +199,8 @@
                "data":[
                  "73",
                  "75",
-                 "81",
-                 "88"
+                 "79",
+                 "87"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "83",
-                 "91",
-                 "94"
+                 "81",
+                 "90",
+                 "85",
+                 "81"
                ]
              }
            ]
@@ -229,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 13:05:26 2018</p>
+         Last Run: Mon Jul 23 14:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -253,36 +253,36 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>60</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNE</td>
-                        <td>63</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>34</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>31</td>
                         <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>52</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>15</td>
+                        <td>18</td>
                         <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -327,7 +327,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
-                 "17",
+                 "16",
                  "15"
                ]
              },
@@ -338,7 +338,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
-                 "17",
+                 "16",
                  "15"
                ]
              }
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
-                 "34",
-                 "15"
+                 "36",
+                 "31",
+                 "18"
                ]
              },
              {
@@ -410,9 +410,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "52",
-                 "60"
+                 "56",
+                 "48",
+                 "59"
                ]
              }
            ]
@@ -429,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 13:05:26 2018</p>
+         Last Run: Mon Jul 23 14:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -451,62 +451,62 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>0</td>
-                        <td>49</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>1</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>35</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>42</td>
+                        <td>44</td>
                         <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -552,9 +552,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
+                 "19",
                  "17",
                  "15"
                ]
@@ -565,9 +565,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
+                 "19",
                  "17",
                  "15"
                ]
@@ -624,9 +624,9 @@
                "data":[
                  "15",
                  "15",
-                 "0",
-                 "39",
-                 "42"
+                 "1",
+                 "41",
+                 "44"
                ]
              },
              {
@@ -634,9 +634,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "46",
-                 "49",
+                 "45",
+                 "47",
+                 "50",
                  "58",
                  "68"
                ]
@@ -646,11 +646,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "52",
-                 "35",
-                 "50",
-                 "50"
+                 "57",
+                 "60",
+                 "49",
+                 "55",
+                 "59"
                ]
              }
            ]
@@ -667,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 13:05:26 2018</p>
+         Last Run: Mon Jul 23 14:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -719,16 +719,16 @@
                         <td>26</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>31</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>15</td>
-                        <td>24</td>
+                        <td>25</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -737,12 +737,12 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>15</td>
                         <td>24</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>32</td>
                      </tr>
@@ -793,8 +793,8 @@
                  "23",
                  "25",
                  "26",
-                 "27",
-                 "27"
+                 "26",
+                 "26"
                ]
              },
              {
@@ -806,8 +806,8 @@
                  "23",
                  "25",
                  "26",
-                 "27",
-                 "27"
+                 "26",
+                 "26"
                ]
              }
            ]
@@ -875,7 +875,7 @@
                  "36",
                  "30",
                  "26",
-                 "24",
+                 "25",
                  "24"
                ]
              },
