--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 15:05:05 2018</p>
+         Last Run: Mon Jul 23 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Calgary West SC GU 17 A - Edge School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 23, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,50 +31,50 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>32</td>
-                        <td>70</td>
-                        <td>1</td>
-                        <td>19</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>21</td>
                         <td>NNE</td>
-                        <td>87</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>31</td>
-                        <td>74</td>
-                        <td>0</td>
+                        <td>Overcast</td>
+                        <td>14</td>
+                        <td>14</td>
                         <td>16</td>
+                        <td>76</td>
+                        <td>0</td>
+                        <td>18</td>
                         <td>NNE</td>
-                        <td>90</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>43</td>
-                        <td>79</td>
+                        <td>40</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>16</td>
                         <td>N</td>
-                        <td>85</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>43</td>
+                        <td>45</td>
                         <td>87</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
-                        <td>81</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,8 +119,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
-                 "15",
+                 "16",
+                 "14",
                  "14",
                  "12"
                ]
@@ -131,8 +131,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
-                 "15",
+                 "16",
+                 "14",
                  "14",
                  "12"
                ]
@@ -187,9 +187,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "32",
-                 "31",
-                 "43",
-                 "43"
+                 "16",
+                 "40",
+                 "45"
                ]
              },
              {
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "74",
-                 "79",
+                 "73",
+                 "76",
+                 "80",
                  "87"
                ]
              },
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "90",
-                 "85",
-                 "81"
+                 "100",
+                 "100",
+                 "83",
+                 "78"
                ]
              }
            ]
@@ -229,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 15:05:05 2018</p>
+         Last Run: Mon Jul 23 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -253,36 +253,36 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>37</td>
-                        <td>59</td>
+                        <td>38</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>62</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>37</td>
-                        <td>62</td>
+                        <td>39</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>13</td>
-                        <td>72</td>
+                        <td>17</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNE</td>
-                        <td>44</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -390,9 +390,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
-                 "37",
-                 "13"
+                 "38",
+                 "39",
+                 "17"
                ]
              },
              {
@@ -400,9 +400,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "62",
-                 "72"
+                 "61",
+                 "63",
+                 "73"
                ]
              },
              {
@@ -410,9 +410,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "51",
-                 "44"
+                 "57",
+                 "50",
+                 "43"
                ]
              }
            ]
@@ -429,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 15:05:05 2018</p>
+         Last Run: Mon Jul 23 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -451,14 +451,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>15</td>
                         <td>45</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -466,17 +466,17 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>1</td>
                         <td>50</td>
                         <td>0</td>
@@ -487,10 +487,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>41</td>
-                        <td>58</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>40</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -499,14 +499,14 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>43</td>
-                        <td>69</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -552,11 +552,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
-                 "17",
-                 "15"
+                 "19",
+                 "18",
+                 "16"
                ]
              },
              {
@@ -565,11 +565,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
                  "20",
                  "20",
-                 "17",
-                 "15"
+                 "19",
+                 "18",
+                 "16"
                ]
              }
            ]
@@ -625,7 +625,7 @@
                  "15",
                  "15",
                  "1",
-                 "41",
+                 "40",
                  "43"
                ]
              },
@@ -635,10 +635,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "45",
-                 "47",
+                 "46",
                  "50",
-                 "58",
-                 "69"
+                 "57",
+                 "67"
                ]
              },
              {
@@ -646,11 +646,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "60",
+                 "58",
+                 "61",
                  "50",
                  "56",
-                 "59"
+                 "58"
                ]
              }
            ]
@@ -667,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 15:05:05 2018</p>
+         Last Run: Mon Jul 23 16:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -701,8 +701,8 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>15</td>
                         <td>32</td>
                         <td>5</td>
@@ -720,7 +720,7 @@
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -728,7 +728,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
@@ -742,7 +742,7 @@
                         <td>15</td>
                         <td>26</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>34</td>
                      </tr>
@@ -791,7 +791,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "23",
-                 "24",
+                 "25",
                  "26",
                  "26",
                  "26"
@@ -804,7 +804,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "23",
-                 "24",
+                 "25",
                  "26",
                  "26",
                  "26"
@@ -875,7 +875,7 @@
                  "38",
                  "32",
                  "28",
-                 "27",
+                 "26",
                  "26"
                ]
              },
@@ -886,7 +886,7 @@
                "data":[
                  "6",
                  "36",
-                 "36",
+                 "35",
                  "34",
                  "34"
                ]
